force-app/main/default/objects/smagicinteract__Shortened_Link__c/smagicinteract__Shortened_Link__c.object-meta.xml
<CustomObject>
    <label>Shortened Link</label>
    <nameField>
        <label>Shortened Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shortened Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>