force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Click_Count__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Click_Count__c</fullName>
    <label>Click Count</label>
    <summaryForeignKey>smagicinteract__Shortened_Link_Detail__c.smagicinteract__Shortened_Link__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>