force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Domain__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Domain__c</fullName>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>