force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>