force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>