force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__External_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>null</defaultValue>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>