force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Active__c</fullName>
    <formula>IF((CreatedDate = LastModifiedDate), 
            AND(
                IF(ISPICKVAL(smagicinteract__State__c, &apos;Success&apos;), true, false),
                IF((ISNULL(smagicinteract__Expiry_Date__c)
                    || NOW() &lt;= DATETIMEVALUE(smagicinteract__Expiry_Date__c)),
                    true,
                    false)
                ), 
            IF((ISNULL(smagicinteract__Expiry_Date__c)
                || NOW() &lt;= DATETIMEVALUE(smagicinteract__Expiry_Date__c)),
                true,
                false)
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>