force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Link_Expiry_in_Days__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Link_Expiry_in_Days__c</fullName>
    <label>Link Expiry in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>