force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Long_URL__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Long_URL__c</fullName>
    <label>Long URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>