force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Provider_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Provider_Record_Id__c</fullName>
    <label>Provider Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>