force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Short_URL__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Short_URL__c</fullName>
    <label>Short URL</label>
    <type>TextArea</type>
</CustomField>