force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__Slash_Tag__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Slash_Tag__c</fullName>
    <label>Slash Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>