force-app/main/default/objects/smagicinteract__Shortened_Link__c/fields/smagicinteract__State__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>